ms-customers: updated test